WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 119217
REGRESSION(148300) GIfs not reanimated after resumeActiveDOMObjectAndAnimations
https://bugs.webkit.org/show_bug.cgi?id=119217
Summary
REGRESSION(148300) GIfs not reanimated after resumeActiveDOMObjectAndAnimations
Allan Sandfeld Jensen
Reported
2013-07-29 06:50:38 PDT
Commit 148300 introduced a new better was of restarting GIF animations after they have been suspended. Unfortunately the method did not get called on normal resumeActiveDOMObjectAndAnimations calls, but only when a page was returned from background.
Attachments
Patch
(1.69 KB, patch)
2013-07-29 06:54 PDT
,
Allan Sandfeld Jensen
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2013-07-29 06:54:30 PDT
Created
attachment 207649
[details]
Patch
Tim Horton
Comment 2
2013-07-29 09:45:59 PDT
Comment on
attachment 207649
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=207649&action=review
> Source/WebCore/ChangeLog:3 > + REGRESSION(148300) GIfs not reanimated after resumeActiveDOMObjectAndAnimations
s/GIfs/GIFs/
Allan Sandfeld Jensen
Comment 3
2013-07-29 10:09:21 PDT
Committed
r153431
: <
http://trac.webkit.org/changeset/153431
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug