Source/WebCore/page/Frame.cpp
@@ -985,6 +985,9 @@ void Frame::resumeActiveDOMObjectsAndAnimations()
         animation()->resumeAnimationsForDocument(document());
         document()->resumeScriptedAnimationControllerCallbacks();
     }
+
+    if (m_view)
+        m_view->resumeAnimatingImages();
 }
 
 #if USE(ACCELERATED_COMPOSITING)
